[gd_scene load_steps=9 format=3 uid="uid://ctrpvo3cwj2mn"]

[ext_resource type="Script" path="res://2_game_scene/min_search/script/axis.gd" id="2_1sb82"]
[ext_resource type="Script" path="res://2_game_scene/min_search/script/world_to_screen.gd" id="2_ku3po"]
[ext_resource type="Script" path="res://2_game_scene/min_search/script/Annealing.gd" id="3_c5qmy"]
[ext_resource type="Script" path="res://2_game_scene/min_search/script/PointDrawer.gd" id="3_ddsdi"]
[ext_resource type="Script" path="res://2_game_scene/min_search/script/FunctionDrawer.gd" id="3_y7110"]
[ext_resource type="Script" path="res://2_game_scene/min_search/script/PointManager.gd" id="4_wcucf"]
[ext_resource type="Script" path="res://2_game_scene/min_search/script/Calculation_GD.gd" id="6_wn7fd"]
[ext_resource type="Script" path="res://2_game_scene/min_search/script/PolyFunction.gd" id="8_pjgyd"]

[node name="XyAxis" type="Node2D"]

[node name="AxisNode" type="Node2D" parent="."]
script = ExtResource("2_1sb82")

[node name="Calculation_GD" type="Node2D" parent="."]
script = ExtResource("6_wn7fd")

[node name="Calculation_AN" type="Node2D" parent="."]
script = ExtResource("3_c5qmy")

[node name="Data" type="Node2D" parent="."]

[node name="PointManager" type="Node2D" parent="Data"]
script = ExtResource("4_wcucf")

[node name="PolyFunction" type="Node2D" parent="Data"]
script = ExtResource("8_pjgyd")

[node name="Drawer" type="Node2D" parent="."]

[node name="world_to_screen" type="Node2D" parent="Drawer"]
script = ExtResource("2_ku3po")

[node name="FunctionDrawer" type="Node2D" parent="Drawer"]
script = ExtResource("3_y7110")

[node name="PointDrawer" type="Node2D" parent="Drawer"]
script = ExtResource("3_ddsdi")
